--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "fluct",
+  "name": "@argus-inc/fluct",
   "version": "0.0.1",
   "description": "Enhanced file system handler for nodejs",
   "main": "src/index.ts",
-  "repository": "git://github.com/argus-inc/fluct.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/argus-inc/fluct"
+  },
   "author": "Mederic Burlet",
   "license": "GPL-3-0-only",
   "private": false,
