:sparkles: feat(versioning): adding tagging

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build",
-    "version": "git add -A",
+    "version": "git add -A src",
     "postversion": "git push && git push --tags"
   },
   "repository": {
