--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prepare": "npm run build",
     "version": "git add -A src",
     "postversion": "git push && git push --tags",
-    "path": "npm version patch && npm publish" 
+    "patch": "npm version patch && npm publish" 
   },
   "repository": {
     "type": "git",
